--- a/tmux.conf
+++ b/tmux.conf
@@ -16,10 +16,14 @@ set -g default-terminal "tmux-256color"
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_date_time_text " %d-%m %H:%M"
 
 # Load catppuccin
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 # For TPM, instead use `run ~/.tmux/plugins/tmux/catppuccin.tmux`
+
+# load custom moudules
+source -F '#{d:current_file}/plugins/custom_modules/ctp_memory.conf'
 
 # Make the status line pretty and add some modules
 set -g status-right-length 100
@@ -27,8 +31,10 @@ set -g status-left-length 100
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -agF status-right '#{E:@catppuccin_status_ctp_memory}'
 set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_date_time}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
 
 run-shell ~/.config/tmux/plugins/tmux-cpu/cpu.tmux
